# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright 2018 Jacob Lifshay
[workspace]
members = [
    "shader-compiler",
    "shader-compiler-backend",
    "shader-compiler-backend-llvm-7",
    "spirv-parser",
    "spirv-parser-generator",
    "vulkan-driver",
]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
