# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright 2018 Jacob Lifshay
[package]
name = "shader-compiler-backend-llvm-7"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"
edition = "2015"

[lib]
crate-type = ["rlib"]

[dependencies]
shader-compiler-backend = {path = "../shader-compiler-backend"}

[build-dependencies]
cmake = "0.1.35"
bindgen = "0.42"
tar = "0.4.17"
reqwest = "0.9"
xz2 = "0.1.6"
ring = "0.13"
cc = "1.0"
fs2 = "0.4.3"
which = "2.0.0"
