# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "shader-compiler-ir"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"
edition = "2018"

[dependencies.typed-arena]
version = "2"

[dependencies.once_cell]
version = "1.2"
