# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright 2018 Jacob Lifshay
[package]
name = "shader-compiler-llvm-7"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"

[lib]
crate-type = ["rlib"]

[dependencies]
shader-compiler = {path = "../shader-compiler"}
llvm-sys = "70"
