# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright 2018 Jacob Lifshay
[package]
name = "shader-compiler"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"
edition = "2015"

[lib]
crate-type = ["rlib"]

[dependencies]
shader-compiler-backend = {path = "../shader-compiler-backend"}
spirv-parser = {path = "../spirv-parser"}
petgraph = "0.4.13"
