# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright 2018 Jacob Lifshay
[package]
name = "spirv-parser-generator"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"

[lib]
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
proc-macro2 = "0.4"
quote = "0.6"
which = "2.0.0"
