# SPDX-License-Identifier: LGPL-2.1-or-later
# See Notices.txt for copyright information
[package]
name = "spirv-parser-generator"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
which = "3"
