# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright 2019 Jacob Lifshay
[package]
name = "spirv-parser"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]

[build-dependencies]
spirv-parser-generator = {path = "../spirv-parser-generator"}
