# SPDX-License-Identifier: LGPL-2.1-or-later
# Copyright 2018 Jacob Lifshay
[package]
name = "vulkan-driver"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
license = "LGPL-2.1-or-later"

[lib]
name = "kazan_driver"
crate-type = ["cdylib"]

[dependencies]
enum-map = "0.4"
uuid = {version = "0.7", features = ["v5"]}
sys-info = "0.5"
shader-compiler-backend = {path = "../shader-compiler-backend"}
shader-compiler-backend-llvm-7 = {path = "../shader-compiler-backend-llvm-7"}

[target.'cfg(unix)'.dependencies]
xcb = {version = "0.8", features = ["shm"]}
libc = "0.2"
errno = "0.2"

[build-dependencies]
bindgen = "0.42"
regex = "1"
xmltree = "0.8"
